syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.scheduler-worker-grpc.jobscheduler";
option java_outer_classname = "JobSchedulerServerProto";
option go_package = "jobscheduler";

import "google/protobuf/timestamp.proto";

package jobscheduler;

// Scheduler server methods
service Scheduler {
  rpc RegisterWorker(RegisterReq) returns (RegisterRes) {}
  rpc DeregisterWorker(DeregisterReq) returns (DeregisterRes) {}
  rpc ReportServiceData(ReportServiceDataRequest) returns (ReportServiceDataResponse) {}
}

message RegisterReq {
  string address = 1;
  string broadcastAddress = 2;
  string envName = 3;
  string envType = 4;
  // google.protobuf.Timestamp launchTime = 5;

}

message RegisterRes {
  bool success = 1;
  string workerID = 2;
}

message DeregisterReq {
  string workerID = 1;
}

message DeregisterRes {
  bool success = 1;
}

message ReportServiceDataRequest {
  string name = 1;
  repeated ServiceData serviceData = 2;
}

message ReportServiceDataResponse {
  bool success = 1;
}

message ServiceData {
  string name = 1;
  string version = 2;
  string state = 3;
  string status = 4;
  string created = 5;
  string revision = 6;
}

// Worker server methods
service Worker {
  rpc StartJob(StartJobReq) returns (StartJobRes) {}
  rpc StopJob(StopJobReq) returns (StopJobRes) {}
  rpc QueryJob(QueryJobReq) returns (QueryJobRes) {}
  rpc QueryServiceVersion(QueryServiceVersionReq) returns (QueryServiceVersionRes) {}
  // rpc StreamJob(StreamJobReq) returns (stream StreamJobRes) {}
}

message StartJobReq {
  string command = 1;
  string path = 2;
}

message StartJobRes {
  string jobID = 1;
}

message StopJobReq {
  string jobID = 1;
}

message StopJobRes {
}

message QueryJobReq {
  string jobID = 1;
}

message QueryJobRes {
  bool done = 1;
  bool error = 2;
  string errorText = 3;
}

message QueryServiceVersionReq {
  string serviceName = 1;
}

message QueryServiceVersionRes {
  string serviceVersion = 1;
}

// message StreamJobReq {
//   string path = 1;
// }

// message StreamJobRes {
//   string output = 1;
// }
